@@ -1,6 +1,7 @@
 Aug 30 2002  2.5.2  Added fixed-parameter support on bigendian systems.  Normal
                      packet detection/dissection should occur on bigendian now.
                     Minor tweaks to packet noise detection
+                    Moved packet rate calculation to server-side
 Aug 29 2002  2.5.2  Fixed reassociation subtype
                     Fixed netstumbler detection signature
                     Started fixing support for bigendian systems.  Initial
